Fixed Path issue in new servlet